--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write
+      id-token: write  # for sigstore OIDC
+      contents: write  # for pushing the signed tag
 
     steps:
       - uses: actions/checkout@v3
