--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ pretty_env_logger = "0.4"
 serde = "1.0"
 serde_yaml = "0.9"
 chrono = "0.4"
+futures = "0.3.28"
 kube-client = "0.82.2"
+kube-runtime = "0.82.2"
 kube = { version = "0.82.2", default-features = false, features = ["client", "rustls-tls"] }
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
 tonic = { version = "0.9", features = ["transport", "tls", "tls-webpki-roots"] }
