--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -94,11 +94,10 @@ jobs:
 
       - name: Generate and publish the SBOM
         uses: anchore/sbom-action@v0
-        if: ${{ matrix.arch == 'amd64' }}
         with:
           # generate for the container built above
           image: ${{ steps.build.outputs.imageid }}
-          artifact-name: sbom.spdx.json
+          artifact-name: sbom-$${ matrix.arch }.spdx.json
           output-file: /tmp/sbom.spdx.json
           format: spdx-json
           syft-version: v0.74.1
