--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -92,15 +92,27 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
-      - name: Generate and publish the SBOM
-        uses: anchore/sbom-action@v0
-        with:
-          # generate for the container built above
-          image: ${{ steps.build.outputs.imageid }}
-          artifact-name: sbom-$${ matrix.arch }.spdx.json
-          output-file: /tmp/sbom.spdx.json
-          format: spdx-json
-          syft-version: v0.74.1
+      #- name: Generate and publish the SBOM
+      #  uses: anchore/sbom-action@v0
+      #  with:
+      #    # generate for the container built above
+      #    image: ${{ steps.build.outputs.imageid }}
+      #    artifact-name: sbom-$${ matrix.arch }.spdx.json
+      #    output-file: /tmp/sbom.spdx.json
+      #    format: spdx-json
+
+      # Download and run Syft manually in order to enable a custom set of catalogers
+      # We want to use the package-lock one which is not enabled by default for containers
+      - name: Download Syft
+        id: syft
+        uses: anchore/sbom-action/download-syft@v0.14.2
+
+      - name: Generate SBOM with custom cataloger
+        run: "${{ steps.syft.outputs.cmd }} --config .github/config/syft.yaml -o spdx-json --file /tmp/sbom.spdx.json ${{ steps.build.outputs.imageid }}"
+
+      # Publish the resulting SBOMs
+      - name: Publish SBOM
+        uses: anchore/sbom-action/publish-sbom@v0.14.2
 
   docker-combine:
     needs: build
