--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -97,7 +97,7 @@ jobs:
       #  with:
       #    # generate for the container built above
       #    image: ${{ steps.build.outputs.imageid }}
-      #    artifact-name: sbom-$${ matrix.arch }.spdx.json
+      #    artifact-name: sbom-${{ matrix.arch }}.spdx.json
       #    output-file: /tmp/sbom.spdx.json
       #    format: spdx-json
 
@@ -113,7 +113,7 @@ jobs:
       - name: Upload SBOM
         uses: actions/upload-artifact@v3
         with:
-          name: sbom-$${ matrix.arch }.spdx.json
+          name: sbom-${{ matrix.arch }}.spdx.json
           path: /tmp/sbom.spdx.json
 
   docker-combine:
