--- a/.github/workflows/upload-sbom.yaml
+++ b/.github/workflows/upload-sbom.yaml
@@ -11,41 +11,28 @@ on:
 jobs:
   upload:
     runs-on: ubuntu-latest
-    if: >
-      github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success'
 
     steps:
-      - name: 'Download SBOM'
-        uses: actions/github-script@v3.1.0
+      - name: Download metadata
+        id: metadata
+        uses: dawidd6/action-download-artifact@v2.28.0
         with:
-          script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{github.event.workflow_run.id }},
-            });
-            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "artifacts"
-            })[0];
-            var download = await github.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            var fs = require('fs');
-            fs.writeFileSync('${{github.workspace}}/artifacts.zip', Buffer.from(download.data));
+          run_id: ${{ github.event.workflow_run.id }}
+          name: metadata.json
 
-      - run: unzip artifacts.zip
+      - name: Download SBOM
+        id: sbom
+        uses: dawidd6/action-download-artifact@v2.28.0
+        with:
+          run_id: ${{ github.event.workflow_run.id }}
+          name: sbom.spdx.json
 
       - name: Upload SBOM to EdgeBit
         uses: edgebitio/edgebit-build@main
         with:
           edgebit-url: https://edgebit.edgebit.io
           token: ${{ secrets.EDGEBIT_ACCESS_TOKEN }}
-          tags: latest
           component: cluster-agent
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          sbom-file: ./sbom.syft.json
+          sbom-file: ./sbom.spdx.json
           args-file: ./metadata.json
