Move back to upstream SBOM action from fork now that changes have landed

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Generate SBOM from the container
         if: ${{ matrix.runs-on == 'buildjet-4vcpu-ubuntu-2204' }}
-        uses: eyakubovich/sbom-action@ey/add-config-input
+        uses: anchore/sbom-action@v0
         with:
           image: ${{ steps.build.outputs.imageid }}
           artifact-name: sbom.spdx.json
