--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   build-binaries:
+    permissions:
+      id-token: write # for AWS OIDC
+
     strategy:
       matrix:
         include:
@@ -22,6 +25,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Authenticate to AWS
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::970625735569:role/GitHubActionsECRPush
+
+      - name: Configure AWS Docker Auth
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          mask-password: true
+          registry-type: public
 
       - name: Generate Image Metadata
         id: meta
