--- a/.github/edgebit/build-syft.yaml
+++ b/.github/edgebit/build-syft.yaml
@@ -1,8 +1,7 @@
 check-for-app-update: false
 
 catalogers:
-  - dpkgdb
-  - dpkg-db
+  - apk
   - go-module-binary
   - go-mod-file
   - rust-cargo-lock
