--- a/.github/edgebit/build-syft.yaml
+++ b/.github/edgebit/build-syft.yaml
@@ -1,8 +1,4 @@
 check-for-app-update: false
 
-catalogers:
-  - apk
-  - go-module-binary
-  - go-mod-file
-  - rust-cargo-lock
-  - sbom
+select-catalogers:
+  - "+rust-cargo-lock-cataloger"
