Fix EB action by propagating the commit SHA

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,6 +72,7 @@ jobs:
         run: |
           cat > /tmp/metadata.json <<EOF
             {
+              "commit-sha": "${{ github.sha }}",
               "image-id": "${{ steps.build.outputs.imageid }}",
               "image-tag": "${{ steps.meta.outputs.tags }}",
               "pr-number": "${{ github.event.number }}",
